fixed navbar hyperlinks on iOS

--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ button {
     margin: 0;
 }
 
+a {
+    /*THIS FIXES THE HYPERLINK FONT ON iOS NOT GETTING PROPERLY STYLED FOR SOME FUCKING REASON*/
+    font-family: var(--default-font), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 button {
     padding: 7px;
     border-radius: 20px;
@@ -377,7 +382,7 @@ footer {
 /* generic phone displays */
 @media screen and (max-width: 450px) {
     h1 {
-        font-size: 2.1rem;
+        font-size: 2.5rem;
     }
 
     h2 {
@@ -436,10 +441,18 @@ footer {
         left: 10px;
     }
 
-	#contact-text > #contact-head-text,
-	#contact-text > #contact-sub-text,
+	#contact-head-text {
+        font-size: 1.5rem;
+    }
+
+    #contact-sub-text {
+        font-size: 1.1rem;
+    }
+
+	#contact-head-text,
+	#contact-sub-text,
 	#contact-address {
-		padding: 5px;
+		padding: 10px;
 	}
 
 	#contact-address {
